--- a/2.html
+++ b/2.html
@@ -15,6 +15,9 @@
     </ol>
     <h2>김버그 유튜브</h2>
     <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/P11h_P1NIb4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+    <p>
         <a href="https://www.youtube.com/c/kimbug">Kimbug</a>
     </p>
     <p style="margin-top:45px;">
