--- a/3.html
+++ b/3.html
@@ -14,7 +14,11 @@
         <li><a href = "3.html">노마드 코드</a></li>
     </ol>
     <h2><a href="https://nomadcoders.co/?gclid=CjwKCAiAxJSPBhAoEiwAeO_fPxVpBo2h3i-CLIeZOAe6P8oSl0cdZRqX-LdbTT986IemdHfB3mnoqxoCvIUQAvD_BwE">
-    노마드 코드</a> </h2>
+    노마드 코드</a> 
+    </h2>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ThGbP9wgkz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
     <p>
         <b> Clone Startups. Learn to code.<br></b>
         코딩은 진짜를 만들어보는거야!
