--- a/First.html
+++ b/First.html
@@ -5,14 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First HTML</title>
+    <style>
+        a{
+            color:black;
+            text-decoration: none;
+        }
+        h1{
+            font-size: 45px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1><a href="First.html">First HTML</a></h1>
     <ol>
-      <li><a href = "1.html">드림코딩엘리</a></li>
+      <li><a href = "1.html" style="color: red;text-decoration: underline;">드림코딩엘리</a></li>
       <li><a href = "2.html">김버그 유튜브</a></li>
       <li><a href = "3.html">노마드 코드</a></li>
-      <li><a href="https://opentutorials.org/course/3084/18891">깃허브에 대한 기초</a></li>
     </ol>
     <h2>나만의 로드맵</h2>
     <p>
@@ -25,17 +34,9 @@
     </ul>
     </p>
     <p>
+
     <div id="disqus_thread"></div>
     <script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
         (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
         s.src = 'https://web1-2.disqus.com/embed.js';
@@ -45,22 +46,7 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
     </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
-
-    <p>
-         <!-- Start of Tawk.to Script tawk를 통한 채팅기능 구현 -->
-    <!-- <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/57a72994c11fe69b0bd8fa90/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-    </script> -->
-        <!--End of Tawk.to Script-->
-    </p>
     <!-- disqus 를 통해 댓글 기능 추가. -->
+    
 </body>
 </html>
