CSS-박스모델-그리드-미디어쿼리(반응형웹)
First.html에만 css를 적용해봄+ grid, box, medidaquery 연습

--- a/3.html
+++ b/3.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML연습사이트(생활코딩)</title>
 </head>
+
 <body>
     <h1><a href="First.html">First HTML</a></h1>
     <ol>
-        <li><a href = "1.html">드림코딩엘리</a></li>
-        <li><a href = "2.html">김버그 유튜브</a></li>
-        <li><a href = "3.html">노마드 코드</a></li>
+        <li><a href="1.html">드림코딩엘리</a></li>
+        <li><a href="2.html">김버그 유튜브</a></li>
+        <li><a href="3.html">노마드 코드</a></li>
     </ol>
-    <h2><a href="https://nomadcoders.co/?gclid=CjwKCAiAxJSPBhAoEiwAeO_fPxVpBo2h3i-CLIeZOAe6P8oSl0cdZRqX-LdbTT986IemdHfB3mnoqxoCvIUQAvD_BwE">
-    노마드 코드</a> 
+    <h2><a
+            href="https://nomadcoders.co/?gclid=CjwKCAiAxJSPBhAoEiwAeO_fPxVpBo2h3i-CLIeZOAe6P8oSl0cdZRqX-LdbTT986IemdHfB3mnoqxoCvIUQAvD_BwE">
+            노마드 코드</a>
     </h2>
     <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ThGbP9wgkz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ThGbP9wgkz8" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </p>
     <p>
         <b> Clone Startups. Learn to code.<br></b>
@@ -25,4 +31,5 @@
         실제 서비스를 따라 만들면서 코딩을 배우세요.
     </p>
 </body>
+
 </html>
