--- a/First.html
+++ b/First.html
@@ -1,52 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First HTML</title>
     <style>
-        a{
-            color:black;
+        body {
+            margin: 0;
+        }
+
+        a {
+            color: black;
             text-decoration: none;
         }
-        h1{
+
+        h1 {
             font-size: 45px;
             text-align: center;
+            border-bottom: 1px solid gray;
+            margin: 0;
+            padding: 20px;
         }
+
+        ol {
+            border-right: 1px solid gray;
+            width: 100px;
+            margin: 0;
+            padding: 20px;
+        }
+        /* 박스모델 , 크롬 개발자모드 */
+        #grid {
+            display: grid;
+            grid-template-columns: 150px 1fr;
+        }
+
+        #grid ol {
+            padding-left: 33px;
+        }
+        /* grid 라는 id 값을 가지는 ol 태그 */
+        #grid #article {
+            padding-left: 25px;
+        }
+        /* grod id값에 article id값. */
+        
+        /* 미디어 쿼리 사용, 반응형 웹에 관하여 */
+        @media(max-width:800px){
+            #grid {
+            display: block;
+            }
+            ol{
+                border-right: none;
+            }
+            h1{
+                border-bottom: none;
+                font-size: 30px;
+            }
+        }
+
     </style>
 </head>
+
 <body>
     <h1><a href="First.html">First HTML</a></h1>
-    <ol>
-      <li><a href = "1.html" style="color: red;text-decoration: underline;">드림코딩엘리</a></li>
-      <li><a href = "2.html">김버그 유튜브</a></li>
-      <li><a href = "3.html">노마드 코드</a></li>
-    </ol>
-    <h2>나만의 로드맵</h2>
-    <p>
-        <img width="300px" height="300px" src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png" width="100%">
-    <ul>
-        <li>첫번째 스텝 생활코딩 HTML 강의 <strong>완료</strong></li>
-        <li>김버그씨 HTML + CSS <b>진행중</b></li>
-        <li>드림코딩 엘리 HTML + CSS + JS 강의 <b>진행중</b></li>
-        <li>다음 과정은 ...</li>
-    </ul>
-    </p>
-    <p>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html" class="saw">드림코딩엘리</a></li>
+            <li><a href="2.html" class="saw" id="active">김버그 유튜브</a></li>
+            <li><a href="3.html">노마드 코드</a></li>
+        </ol>
+        <div id="article">
+            <h2>나만의 로드맵</h2>
+            <p>
+                <img width="300px" height="300px"
+                    src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png"
+                    width="100%">
 
+            <ul>
+                <li>첫번째 스텝 생활코딩 HTML 강의 <strong>완료</strong></li>
+                <li>김버그씨 HTML + CSS <b>진행중</b></li>
+                <li>드림코딩 엘리 HTML + CSS + JS 강의 <b>진행중</b></li>
+                <li>다음 과정은 ...</li>
+            </ul>
+            </p>
+        </div>
+    </div>
+
+    <p>
+        <!-- disqus 를 통해 댓글 기능 추가. -->
     <div id="disqus_thread"></div>
     <script>
-        (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://web1-2.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-2.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
         })();
     </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
     </p>
-    <!-- disqus 를 통해 댓글 기능 추가. -->
-    
+
+
 </body>
+
 </html>
