--- a/1.html
+++ b/1.html
@@ -6,26 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML연습사이트(생활코딩)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1><a href="First.html">First HTML</a></h1>
-    <ol>
-        <li><a href="1.html">드림코딩엘리</a></li>
-        <li><a href="2.html">김버그 유튜브</a></li>
-        <li><a href="3.html">노마드 코드</a></li>
-    </ol>
-    <h2>드림코딩엘리</h2>
-    <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TTLHd3IyErM" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </p>
-    <p>
-        <a href="https://academy.dream-coding.com/" target="_blank" title="Html5 specification"> 드림코딩엘리</a>
-    </p>
-    <p style="margin-top:45px;">여러분의 멋진 꿈을 드림코딩에서 엘리와 함께 코딩해 나가세요!</p>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">드림코딩엘리</a></li>
+            <li><a href="2.html">김버그 유튜브</a></li>
+            <li><a href="3.html">노마드 코드</a></li>
+        </ol>
+        <div id="article">
+            <h2>드림코딩엘리</h2>
+            <p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TTLHd3IyErM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </p>
+
+            <p>
+                <a href="https://academy.dream-coding.com/" target="_blank" title="Html5 specification"> 드림코딩엘리</a>
+            </p>
+            <p style="margin-top:45px;">여러분의 멋진 꿈을 드림코딩에서 엘리와 함께 코딩해 나가세요!</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
