--- a/2.html
+++ b/2.html
@@ -6,29 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김버그 유튭</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1><a href="First.html">First HTML</a></h1>
-    <ol>
-        <li><a href="1.html">드림코딩엘리</a></li>
-        <li><a href="2.html">김버그 유튜브</a></li>
-        <li><a href="3.html">노마드 코드</a></li>
-    </ol>
-    <h2>김버그 유튜브</h2>
-    <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/P11h_P1NIb4" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </p>
-    <p>
-        <a href="https://www.youtube.com/c/kimbug">Kimbug</a>
-    </p>
-    <p style="margin-top:45px;">
-        김버그의 HTML&CSS는 재밌다.
-    </p>
-
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">드림코딩엘리</a></li>
+            <li><a href="2.html">김버그 유튜브</a></li>
+            <li><a href="3.html">노마드 코드</a></li>
+        </ol>
+        <div id="article">
+            <h2>김버그 유튜브</h2>
+            <p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/P11h_P1NIb4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </p>
+            <p>
+                <a href="https://www.youtube.com/c/kimbug">Kimbug</a>
+            </p>
+            <p style="margin-top:45px;">
+                김버그의 HTML&CSS는 재밌다.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
