--- a/First.html
+++ b/First.html
@@ -27,6 +27,7 @@
             <li><a href="1.html" class="saw">드림코딩엘리</a></li>
             <li><a href="2.html" class="saw" id="active">김버그 유튜브</a></li>
             <li><a href="3.html">노마드 코드</a></li>
+            <li><a href="time.html" id="time">시간표!</a></li>
         </ol>
         <div id="article">
             <h2>나만의 로드맵</h2>
