--- a/2.html
+++ b/2.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김버그 유튭</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <h1><a href="First.html">First HTML</a></h1>
+    <h1><a href="index.html">First HTML</a></h1>
     <div id="grid">
         <ol>
             <li><a href="1.html">드림코딩엘리</a></li>
@@ -33,6 +34,7 @@
             </p>
         </div>
     </div>
+
 </body>
 
 </html>
