--- a/3.html
+++ b/3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1><a href="First.html">First HTML</a></h1>
+    <h1><a href="index.html">First HTML</a></h1>
     <div id="grid">
         <ol>
             <li><a href="1.html">드림코딩엘리</a></li>
